--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 VUE_APP_NETEASE_API_URL=http://localhost:3000
 VUE_APP_PROXY_URL=http://localhost:3000
 VUE_APP_ENABLE_SENTRY=false
-VUE_APP_DISABLE_CDN=0
+VUE_APP_ENABLE_CDN=0
 VUE_APP_CDN_URL=
