--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "vue": "^2.6.11",
     "vue-analytics": "^5.22.1",
     "vue-electron": "^1.0.6",
+    "vue-gtag": "^1.10.0",
     "vue-i18n": "^8.22.0",
     "vue-router": "^3.4.3",
     "vue-slider-component": "^3.2.5",
